--- a/SJTU-Spark Open Platform.html
+++ b/SJTU-Spark Open Platform.html
@@ -11,13 +11,13 @@
 <title>Science and Technology Innovation (Part 3-C) Report by Group 3</title>
 
 <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-<link href="http://spark.sjtu.edu.cn/static/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="http://spark.sjtu.edu.cn/static/css/ephesians.css" rel="stylesheet">
+<link href="css/ephesians.css" rel="stylesheet">
 
 <!-- Custom Fonts -->
-<link href="./SJTU-Spark Open Platform_files/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
