--- a/index.html
+++ b/index.html
@@ -130,10 +130,28 @@
                 </p>
                 <p>
                     We learnt many boards as well as new softwares
-                </p>
 
+                </p>
+                <br/>
             </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+
+            <div class="row">
+
+            <div class="col-lg-4 col-lg-offset-1">
+                <img src="image/system.png" style="height:500px;" class="logo img-thumbnail">
+            </div>
+
+            <div class="col-lg-6 text-left">
+                <p>
+                    This is the smart home system in our experiment. As you can see, it contains several parts, mainly including
+                    the power supply, the gateway, many control units, sockets as well as end device(different kinds of light).
+                </p>
+                <p>
+                    The complicated system is constructed by many microcontrollers. Here we use STM32F103 for its low power consumption and cost.
+                    The gateway is the interface between the system and the administrator. It uses CAN to communicate with other microcontrollers.
+                    Our instructor, Zhang, also provides us with a software programmed by QT to control the system.
+                </p>
+            </div>
             </div>
         </div>
     </div>
@@ -297,6 +315,15 @@
                         </h3>
                         <p class="text-center ">
                             The data is presented in two files, one for clicks and another one for buys. Presentation on the clicks and buy from the same session together, to get a better sense of the problem.
+                        </p>
+                    </div>
+                    <div class="item">
+                        <img src="img/l-bfgs.jpg" style="height:200px;width:60%;" class="img-thumbnail" alt="..." />
+                        <h3>
+                            QT
+                        </h3>
+                        <p class="text-center">
+                            L-BFGS has been applied as an effective parameter estimation method for various machine learning algorithms since 1980s. It is important to scale up and parallelize L-BFGS effectively in a distributed system.
                         </p>
                     </div>
                     <div class="item">
